--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+<% @books.each do |book| %>
+<div>
+  <%= image_tag book.get_image %>
+  <%= image_tag 'sample-author1.jpg' %>
+  <%= link_to book_path(book.id) do %>
+    Title: <%= book.book_name %>
+  <% end %>
+  <p>Opinion: <%= book.caption %></p>
+</div>
+<% end %>
