--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div>
+  <%= image_tag book.get_image %>
+  <p>投稿ユーザー画像: <%= image_tag 'sample-author1.jpg' %></p>
+  <p>ユーザーネーム: <%= book.user.name %></p>
+  <p>Title: <%= book.book_name %></p>
+  <p>Opinion: <%= book.caption %></p>
+</div>
