--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div>
-  <h3><%= @user.name %></h3>
+  <h2>User info</h2>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <h3><%= @user.name %></h3>
+  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
 </div>
 
 <% @books.each do |book| %>
