--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,33 @@
 
   <body>
     <header>
-      <h1>Bookers</h1>
+      <%= link_to "Bookers", root_path %>
       <% if user_signed_in? %>
+        <li>
+          <%= link_to "Home", books_path %>
+        </li>
         <li>
           <%= link_to '投稿フォーム', new_book_path %>
         </li>
         <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
       <% else %>
         <li>
-          <%= link_to "Log in", new_user_session_path %>
+          <%= link_to "Home", root_path %>
+        </li>
+        <li>
+          <%= link_to "About", about_path %>
         </li>
         <li>
           <%= link_to "Sign up", new_user_registration_path %>
         </li>
+        <li>
+          <%= link_to "Log in", new_user_session_path %>
+        </li>
       <% end %>
     </header>
     <%= yield %>
+    <footer>CopyRight Infratop.inc</footer>
   </body>
 </html>
