--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,10 @@
 <div>
-  <%= image_tag book.get_image %>
-  <p>投稿ユーザー画像: <%= image_tag 'sample-author1.jpg' %></p>
-  <p>ユーザーネーム: <%= book.user.name %></p>
-  <p>Title: <%= book.book_name %></p>
-  <p>Opinion: <%= book.caption %></p>
+  <%= image_tag @user.get_profile_image %>
+  <p>ユーザーネーム: <%= @user.name %></p>
+  <p>Title: <%= @book.title %></p>
+  <p>Opinion: <%= @book.body %></p>
   <% if @book.user == current_user %>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
     <%= link_to "Destroy", book_path(@book), method: :delete %>
   <% end %>
 </div>
