--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,13 @@
       <%= link_to "Bookers", root_path %>
       <% if user_signed_in? %>
         <li>
-          <%= link_to "Home", books_path %>
+          <%= link_to "Home", user_path(@user.id) %>
+        </li>
+        <li>
+          <%= link_to "Users", users_path %>
+        </li>
+        <li>
+          <%= link_to "Books", books_path %>
         </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
