--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,10 @@
 <%= render 'books/list', book: @book %>
 <h1>Users</h1>
 
+<% @users.each do |user| %>
+<div>
+  <%= image_tag @user.get_profile_image %>
+  <p>name: <%= user.name %></p>
+  <%= link_to "Show", user_path(@user.id) %>
+</div>
+<% end %>
