--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,21 @@
-<%= render 'books/list', books: @books %>
+<div>
+  <%= flash[:notice] %>
+</div>
+<%= render 'books/list', book: @books %>
 <div>
   <h2>User info</h2>
-
-  <h3><%= @user.name %></h3>
+  <%= image_tag @user.get_profile_image %>
+  <p>name: <%= @user.name %></p>
+  <p>introduction</p>
   <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
 </div>
 
 <% @books.each do |book| %>
 <div>
-  <%= link_to book_path(book.id) do %>
-    <%= image_tag book.get_image %>
+  <%= link_to user_path(@user.id) do %>
+    <%= image_tag @user.get_profile_image %>
   <% end %>
-  <p>投稿ユーザー画像: <%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム: <%= book.user.name %></p>
-  <p>Title: <%= book.book_name %></p>
-  <p>Opinion: <%= book.caption %></p>
+  <p>Title: <%= book.title %></p>
+  <p>Opinion: <%= book.body %></p>
 </div>
 <% end %>
