レイアウト中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -14,6 +15,9 @@
     <header>
       <%= link_to "Bookers", root_path %>
       <% if user_signed_in? %>
+        <li>
+          <%= link_to "Home", user_path(current_user) %>
+        </li>
         <li>
           <%= link_to "Users", users_path %>
         </li>
@@ -28,7 +32,7 @@
           <%= link_to "Home", root_path %>
         </li>
         <li>
-          <%= link_to "About", about_path %>
+          <%= link_to "About", home_about_path %>
         </li>
         <li>
           <%= link_to "Sign up", new_user_registration_path %>
