--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,8 @@
 
 <% @users.each do |user| %>
 <div>
-  <%= image_tag @user.get_profile_image %>
+  <%= image_tag user.get_profile_image %>
   <p>name: <%= user.name %></p>
-  <%= link_to "Show", user_path(@user.id) %>
+  <%= link_to "Show", user_path(user.id) %>
 </div>
 <% end %>
