--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,10 +1,24 @@
 
-  <%= form_with model: book, url: '/books', method: :post do |f| %>
+<%= form_with model: book, url: '/books', method: :post do |f| %>
 
-  <h1>New book</h1>
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <table class="table table-striped">
+        <h2>User info</h2>
+        <%= image_tag @user.get_profile_image %>
+        <p>name: <%= @user.name %></p>
+        <p>introduction: <%= @user.introduction %></p>
+        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+
+        <h1>New book</h1>
+          <h4>Title</h4>
+            <%= f.text_field :title %>
+          <h4>Opinion</h4>
+            <%= f.text_area :body %>
+          <%= f.submit 'Create Book' %>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
