--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,14 +8,23 @@
   <% end %>
 
 <%= render 'list', book: @book %>
-<h1>Books</h1>
-<% @books.each do |book| %>
-
-<div>
-  <%= image_tag @user.get_profile_image %>
-  <%= link_to book_path(book.id) do %>
-    Title: <%= book.title %>
-  <% end %>
-  <p>Opinion: <%= book.body %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table table-striped">
+        <% @books.each do |book| %>
+        <div>
+          <%= link_to user_path(@user.id) do %>
+            <%= image_tag @user.get_profile_image %>
+          <% end %>
+          <%= link_to book_path(book.id) do %>
+            Title: <%= book.title %>
+          <% end %>
+          <p>Opinion: <%= book.body %></p>
+        </div>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
-<% end %>
