--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'books/list', book: @book %>
+<%= render 'books/list', book: @book, user: @users %>
 <h1>Users</h1>
 
 <% @users.each do |user| %>
