--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,7 @@
 <div>
   <%= flash[:notice] %>
 </div>
-<%= render 'books/list', book: @books %>
-<div>
-  <h2>User info</h2>
-  <%= image_tag @user.get_profile_image %>
-  <p>name: <%= @user.name %></p>
-  <p>introduction</p>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-</div>
+<%= render 'books/list', book: @books, user: @users %>
 
 <% @books.each do |book| %>
 <div>
