--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,15 +1,23 @@
-<%= render 'list', book: @new %>
-<dib>
-  <%= flash[:notice] %>
-</dib>
-<h1>Book detail</h1>
-<div>
-  <%= image_tag @user.get_profile_image %>
-  <p>ユーザーネーム: <%= @user.name %></p>
-  <p>Title: <%= @book.title %></p>
-  <p>Opinion: <%= @book.body %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book.id) %>
-    <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <%= render 'list', book: @new %>
+      <div class="col-md-8 offset-md-1">
+      <dib>
+        <%= flash[:notice] %>
+      </dib>
+      <h1>Book detail</h1>
+      <div>
+        <%= link_to user_path(@user.id) do %>
+          <%= image_tag @user.get_profile_image %>
+          <p><%= @user.name %></p>
+        <% end %>
+        <p>Title: <%= @book.title %></p>
+        <p>Opinion: <%= @book.body %></p>
+        <% if @book.user == current_user %>
+          <%= link_to "Edit", edit_book_path(@book.id) %>
+          <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消しますか？" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
