--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,15 @@
-<%= render 'books/list', book: @book, user: @users %>
-<h1>Users</h1>
-
-<% @users.each do |user| %>
-<div>
-  <%= image_tag user.get_profile_image %>
-  <p>name: <%= user.name %></p>
-  <%= link_to "Show", user_path(user.id) %>
+<div class="container">
+  <div class="row">
+    <%= render 'books/list', book: @book, user: @users %>
+    <div class="col-md-8 offset-md-1">
+    <h1>Users</h1>
+      <% @users.each do |user| %>
+      <div>
+        <%= image_tag user.get_profile_image %>
+        <p>name: <%= user.name %></p>
+        <%= link_to "Show", user_path(user.id) %>
+      </div>
+      <% end %>
+      </div>
+  </div>
 </div>
-<% end %>
