--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
   <head>
     <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -42,6 +42,12 @@
       <% end %>
     </header>
     <%= yield %>
-    <footer>CopyRight Infratop.inc</footer>
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto">
+          <footer>CopyRight Infratop.inc</footer>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
