--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,25 +1,22 @@
 <div>
   <%= flash[:notice] %>
 </div>
-<h1>welcome to Bookers!!</h1>
-<p>In
-  <strong>Bookers</strong>
-  ,
-</p>
-
-<p>you can share and exchange your opinions,inpressions,and emotions</p>
-
-<p>adout various books!</p>
-
-<% if user_signed_in? %>
-  <li>
-    <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-  </li>
-<% else %>
-  <li>
-    <%= link_to "Log in", new_user_session_path %>
-  </li>
-  <li>
-    <%= link_to "Sign up", new_user_registration_path %>
-  </li>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto coll-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to Bookers!!</h1>
+      <p>In
+        <strong>Bookers</strong>
+        ,
+      </p>
+      <p>you can share and exchange your opinions,inpressions,and emotions</p>
+      <p>adout various books!</p>
+      <li>
+        <%= link_to "Log in", new_user_session_path %>
+      </li>
+      <li>
+        <%= link_to "Sign up", new_user_registration_path %>
+      </li>
+    </div>
+  </div>
+</div>
