--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,8 +4,13 @@
 <div class="container">
   <div class="row">
     <div class="mx-auto coll-11 col-sm-10 col-lg-8 col-xl-6">
-      <h1>welcome to Bookers!!</h1>
+      <h1>welcome to 
+        <i class="fas fa-book"></i>
+        <strang>Bookers</strang>
+        !!
+      </h1>
       <p>In
+        <i class="fas fa-book"></i>
         <strong>Bookers</strong>
         ,
       </p>
