--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,42 +12,97 @@
 
   <body>
     <header>
-      <%= link_to "Bookers", root_path %>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(current_user) %>
-        </li>
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "About", home_about_path %>
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Log in", new_user_session_path %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <p class="navbar-brand">
+            <%= link_to "Bookers", root_path %>
+          </p>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to user_path(current_user) do %>
+                      <i class="fas fa-home"></i>
+                      Home
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to users_path do %>
+                      <i class="fas fa-users"></i>
+                      Users
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to books_path do %>
+                      <i class="fas fa-book-open"></i>
+                      Books
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to destroy_user_session_path, method: :delete do %>
+                      <i class="fas fa-sign-out-alt"></i>
+                      Log out
+                    <% end %>
+                  </p>
+                </li>
+              <% else %>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to root_path do %>
+                      <i class="fas fa-home"></i>
+                      Home
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to home_about_path do %>
+                      <i class="fas fa-link"></i>
+                      About
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to new_user_registration_path do %>
+                      <i class="fas fa-user-plus"></i>
+                      Sign up
+                    <% end %>
+                  </p>
+                </li>
+                <li>
+                  <p class="nav-link text-light">
+                    <%= link_to new_user_session_path do %>
+                      <i class="fas fa-sign-in-alt"></i>
+                      Log in
+                    <% end %>
+                  </p>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <%= yield %>
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto">
-          <footer>CopyRight Infratop.inc</footer>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="mx-auto">
+            <footer>CopyRight Infratop.inc</footer>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
