--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,24 @@
-<h2>User info</h2>
-<% if @user.errors.any? %>
- <%= @user.errors.count %>error prohibited this obj from being saved:
- <ul>
-   <% @user.errors.full_messages.each do |message| %>
-     <li><%= message %></li>
-   <% end %>
- </ul>
-<% end %>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofoucs: true, id:"inputName", placeholder:"名前" %>
-  <label for="inputImage">Image</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_area :introduction %>
-  <%= f.submit "Update User" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>error prohibited this obj from being saved:
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+       </ul>
+      <% end %>
+      <%= form_with model: @user do |f| %>
+        <label for="inputName">Name</label>
+        <br><%= f.text_field :name, autofoucs: true, id:"inputName", placeholder:"名前" %>
+        <br><label for="inputImage">Image</label>
+        <br><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+        <br><label for="inputIntroduction">Introduction</label>
+        <br><%= f.text_area :introduction %>
+        <br><%= f.submit "Update User" %>
+      <% end %>
+    </div>
+  </div>
+</div>
